# Gravity-modeling-in-fortran

./: .gitignore  Dockerfile  README.md  create_spec.py  inver.f  pyproject.toml  requirements.txt
.github/workflows/: build-executable.yml  docs.yml
docs/: api_reference.rst  conf.py  contributing.rst  examples.rst  gui_guide.rst  index.rst  installation.rst  legacy_code.rst  quickstart.rst  testing.rst  theory.rst
examples/: README.md
examples/intrusion_3d/: intrusion_3d.json
examples/kimberlite_pipe/: kimberlite_pipe.json
examples/ore_body_2d/: ore_body_2d.json
legacy/: README.md  inver.f  main.f  mod1.f  plot.f  rotate.f  svd.f  talw.f
src/: gravity_modeling_app.py  main.py  test_simulation.py
src/gmm/: api.py  gm.py  inversion.py  inversion_complete.py  talw.py  types.py
tests/: __init__.py  test_api.py
